<resources>
    <string name="app_name">Barbería Saladillo</string>
    <string name="main_nav_mnuDates">Elegir Cita</string>
    <string name="main_nav_mnuHistoryDates">Historial Citas</string>
    <string name="main_nav_mnuReviews">Reseñas</string>
    <string name="main_nav_mnuGallery">Galería</string>
    <string name="main_nav_mnuAbout">Nosotros</string>
    <string name="dates_title">Elegir Cita</string>
    <string name="main_nav_mnuLogOut">Cerrar sesión</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc eget enim at ipsum commodo pretium eu vitae sapien. Aliquam at pellentesque diam, id viverra elit. Duis consectetur commodo justo, ut luctus tellus iaculis et. Curabitur sit amet porttitor arcu. Proin nec ante sed diam volutpat maximus. Maecenas non mi nunc. Duis in tortor at mi ultrices maximus. Nullam rutrum convallis magna cursus aliquet. Praesent posuere, risus sit amet cursus ornare, velit diam pretium sem, ultricies elementum felis ante ut sem. Sed hendrerit ex ut bibendum commodo. Phasellus quis felis vitae ligula posuere consectetur vel sed felis. Suspendisse potenti. Pellentesque lorem leo, placerat id eleifend ac, fringilla quis nisl. Nullam sed enim facilisis, dignissim metus ac, porttitor lectus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Proin vehicula magna quis erat ultrices, eu vehicula dui varius. Morbi tincidunt accumsan orci, eget feugiat dolor semper nec. Curabitur varius sapien eu nunc tristique laoreet. Mauris vitae mauris vestibulum, consectetur nisi nec, tincidunt mi. Ut aliquam lobortis ante eu volutpat. Nullam dapibus consequat turpis at maximus. Proin at magna a velit interdum vestibulum quis ut odio. Suspendisse enim arcu, laoreet in nunc non, lacinia vulputate dolor. Vestibulum a elit sapien. Aenean hendrerit, lectus ac commodo congue, mi augue venenatis lacus, porta fringilla velit purus vitae nisl. Suspendisse eu nibh ut felis eleifend ornare vel ac ex. Suspendisse libero eros, pretium id lobortis quis, pretium id lacus. Cras cursus quam mi. Maecenas massa risus, fringilla vel hendrerit at, lacinia id quam. Pellentesque ullamcorper rutrum orci, et dictum massa aliquet eu. Proin sed sagittis ex, non eleifend ligula. Vivamus vitae consectetur ligula, sed eleifend eros. In at scelerisque felis, id lobortis leo. Maecenas placerat, mi rutrum molestie bibendum, nisl neque consequat lorem, imperdiet porta ante justo eu ante. Cras pellentesque cursus commodo. Pellentesque ligula nibh, accumsan quis malesuada eget, dapibus id metus. Aenean in porta dui, eget tincidunt nibh. Donec urna tellus, iaculis nec lorem a, viverra gravida est. Praesent hendrerit bibendum libero. Praesent pulvinar iaculis gravida. Cras ac pellentesque velit. Praesent at felis ante. Maecenas ut nisi pharetra, convallis erat quis, pulvinar lorem. Suspendisse et faucibus eros. Vivamus laoreet, orci vel rutrum laoreet, urna diam condimentum nunc, in mollis diam odio eget nibh. Cras mattis, arcu malesuada ornare congue, ex ex tincidunt nisl, vel pellentesque risus lacus a dolor. Donec posuere porta sollicitudin. Vivamus quis ultricies ipsum. Nulla erat augue, venenatis vel tempus sit amet, pharetra ut metus. Maecenas ut nisi varius, fermentum metus in, sodales felis. Maecenas tristique blandit nibh ac egestas. Fusce a quam risus. Vestibulum non tincidunt ligula, eget mattis mauris. In rutrum et nisl nec interdum.</string>
    <string name="history_dates_title">Historial de citas</string>
    <string name="about_title">Nosotros</string>
    <string name="login">Iniciar sesión</string>
    <string name="or">o</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="register">Registrarse</string>
    <string name="main_lblEmptyView">No se encuentra ninguna imagen</string>
    <string name="gallery_title">Galería</string>
    <string name="btn_login">Iniciar sesión</string>
    <string name="txtEmailHint">Email</string>
    <string name="txtPasswordHint">Contraseña</string>
    <string name="lbl_forgot_pass">¿Olvidaste tu contraseña?</string>
    <string name="btn_create_account">Crear una cuenta</string>
    <string name="txt_full_name">Nombre completo</string>
    <string name="btn_register">Registrarse</string>
    <string name="txt_confirm_password_Hint">Confirme contraseña</string>
    <string name="txtEmailRecoveryHint">Escriba su email</string>
    <string name="btn_recovery_pass">Enviar email de recuperación</string>
    <string name="txtPhoneHint">Teléfono</string>
    <string name="select_date_confirmation">¿Seguro que quieres esta cita?</string>
    <string name="cancel">Cancelar</string>
    <string name="confirm">Confirmar</string>
    <string name="reviews_title">Reseñas</string>
    <string name="lbl_contact_schedule">CONTACTO Y HORARIO DE APERTURA</string>
    <string name="lbl_phone_number">690 85 66 66</string>
    <string name="call_txt">LLAMAR</string>
    <string name="btn_do_review_txt">HACER RESEÑA</string>
    <string name="history_dates_lblEmptyView">No tienes citas en el historial</string>
    <string name="add_review_title">Añadir reseña</string>
    <string name="lbl_rating_txt">Valoración</string>
    <string name="lbl_review_txt">Comentario</string>
    <string name="btn_add_review_text">CREAR RESEÑA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_info_title">Info del usuario</string>
    <string name="btn_cancel_date_text">CANCELAR CITA</string>
    <string name="btn_call_user_text">LLAMAR AL USUARIO</string>
    <string name="btn_send_email_user_text">ENVIAR EMAIL</string>
    <string name="lbl_name">NOMBRE:</string>
    <string name="lbl_email">EMAIL:</string>
    <string name="lbl_phone">TELÉFONO:</string>
    <string name="lbl_date">FECHA DE CITA:</string>
    <string name="lbl_active_date">CITA ACTIVA:</string>
    <string name="lbl_active_date_info">Para elegir una nueva cita antes debe cancelar su cita solicitada</string>
    <string name="back">Atrás</string>
</resources>