<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_app_blue"
    android:padding="16dp"
    android:paddingTop="60dp"
    tools:context=".ui.auth.RegisterActivity">


    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="220dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_vertical"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/txtFullName"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:drawablePadding="10dp"
        android:hint="@string/txt_full_name"
        android:inputType="text"
        android:paddingBottom="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:drawablePadding="10dp"
        android:hint="@string/txtEmailHint"
        android:inputType="textEmailAddress"
        android:paddingBottom="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFullName"/>

    <EditText
        android:id="@+id/txtTelephone"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:drawablePadding="10dp"
        android:hint="@string/txtPhoneHint"
        android:inputType="phone"
        android:paddingBottom="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail"/>


    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:drawablePadding="10dp"
        android:hint="@string/txtPasswordHint"
        android:inputType="textPassword"
        android:paddingBottom="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTelephone" />

    <EditText
        android:id="@+id/txtConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:drawablePadding="10dp"
        android:hint="@string/txt_confirm_password_Hint"
        android:inputType="textPassword"
        android:paddingBottom="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:layout_marginTop="32dp"
        android:background="@color/default_app_orange"
        android:text="@string/btn_register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtConfirmPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>